[package]
name = "grim-rust"
version = "0.0.1"
authors = ["demize"]
edition = "2018"

[dependencies]
bitflags = "1.0"
json = "0.11"
pretty-bytes = "0.2.2"
users = "0.8"
convert-byte-size-string = "1.1"

[dependencies.cursive]
version = "0.10"
features = ["termion-backend"]

[[bin]]
name = "grim"
path = "src/grim/main.rs"